feat: add doctor search by specialty and improve search handling